SLING-10586 prevent java.nio.file.FileSystemNotFoundException during DefaultArtifactHandler.getArtifact(...)